<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".profile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="419dp"
        android:layout_height="472dp"
        android:background="#096492">

        <include
            layout="@layout/toolbar"
            tools:layout_editor_absoluteX="3dp"
            tools:layout_editor_absoluteY="2dp" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="199dp"
            android:layout_height="196dp"
            android:layout_marginTop="72dp"
            android:background="@drawable/border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_person_24"
            android:contentDescription="@string/user" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="157dp"
            android:layout_height="43dp"
            android:gravity="center"
            android:text="@string/profile_name"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <View
            android:layout_width="2dp"
            android:layout_height="90dp"
            android:layout_marginStart="12dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.958" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:text="@string/_125"
            android:textColor="#F6F6F6"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginEnd="196dp"
            android:layout_marginBottom="12dp"
            android:text="@string/followers"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="12dp"
            android:text="@string/friends"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginEnd="196dp"
            android:layout_marginBottom="64dp"
            android:text="@string/_250"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/Ten"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="@string/tr_n_v_n_chi_nh"
            android:textColor="#F8FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/msv"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/msv"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="12dp"
            android:text="@string/_2050531200112"
            android:textColor="#F8FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="415dp"
        android:layout_height="269dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="270dp"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_blue"
            android:text="@string/email_mail_email_com"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="497dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="270dp"
            android:layout_height="42dp"
            android:background="@drawable/border_blue"
            android:text="@string/web_cssauthor_com"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="623dp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="270dp"
            android:layout_height="42dp"
            android:background="@drawable/border_blue"
            android:text="@string/phone_9999999"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="539dp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="270dp"
            android:layout_height="42dp"
            android:background="@drawable/border_blue"
            android:text="@string/skype_me007"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="581dp" />
    </LinearLayout>

</LinearLayout>