<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTen"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="@string/tr_n_v_n_chi_nh"
            android:textColor="#096492"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvMsv"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="@string/_2050531200112"
            android:textColor="#096492"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:contentDescription = "@null"
            android:layout_height="185dp"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/ic_baseline_format_quote_24" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/border_blue"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:textColorHint="#5C6BC0"
            tools:ignore="TextContrastCheck,TextContrastCheck"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/border_blue"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#467DDC"
            tools:ignore="TextContrastCheck"
            android:autofillHints="" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="44dp"
            android:layout_marginRight="40dp"
            android:background="#096492"
            android:text="@string/login_me"
            android:textColor="#EEFFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:contentDescription = "@null"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_baseline_vpn_key_24" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lost_password"
            android:textColor="#096492"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>